/**
* @version $Id$
* @package FrontAccounting
* @copyright (C) 2005 - 2011 FrontAccounting, LLC
* @license http://www.gnu.org/copyleft/gpl-3.0.html GNU/GPL
* FrontAccounting is Free Software
*/

1. Changelog
------------
This is a changelog for FrontAccounting All releases.

2014-03-10 10:58 +0100 Joe
(3367) Release 2.3.20
 version.php

2014-03-10 10:18 +0100 Janusz Dobrowolski
(3366) Gettext template update.
 lang/new_language_template/LC_MESSAGES/empty.po

2014-03-07 00:57 +0100 Janusz Dobrowolski
(3365) Fixed security issues in file uploads.
 admin/attachments.php
 admin/company_preferences.php
 admin/inst_lang.php
 includes/main.inc
 inventory/includes/inventory_db.inc

2014-03-10 10:15 +0100 Joe
(3364) fixed a check that company logo exists when using header3.
 reporting/includes/pdf_report.inc

2014-02-07 09:02 +0100 Joe
(3363) If no memo on GL line in GL account inquiry, the comments for the voucher is shown on the line.
 gl/inquiry/gl_account_inquiry.php

2014-02-07 01:13 +0100 Joe
(3362) Supplier info not shown on gl inquiry for bank account.
 purchasing/includes/db/supp_payment_db.inc

2014-02-04 15:35 +0100 Joe
(3361) Supp credit notes should not be shown in allocable list.
 purchasing/includes/db/suppalloc_db.inc

2014-02-04 12:47 +0100 Janusz Dobrowolski
(3360) Fixed bug in Supplier Credit Note allocation to Purchase Invoice.
 purchasing/includes/db/invoice_db.inc

2014-01-29 08:49 +0100 Joe
(3359) Link customer payment entry after saving Invoice (if not cash)
 purchasing/supplier_invoice.php
 sales/customer_invoice.php
 sales/sales_order_entry.php

2014-01-17 13:38 +0100 Joe
(3358) 0002615: Rerun. voiding an allocated currency invoice doesn't clear FX account
 sales/includes/db/custalloc_db.inc

2014-01-16 19:34 +0100 Joe
(3357) 0002615: voiding an allocated currency invoice doesn't clear FX account
 purchasing/includes/db/suppalloc_db.inc
 sales/includes/db/custalloc_db.inc

2013-12-28 21:04 +0100 Janusz Dobrowolski